<resources>
    <string name="app_name">GYMUP!</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="gymList">Listado de Gimnasios</string>
    <string name="aboutUs">Acerca de Nosotros</string>
    <string name="services">Servicios</string>
    <string name="contact">Contacto</string>
    <string name="users">Usuarios</string>
    <string name="userProfile">Perfil del Usuario</string>
    <string name="nutrition">Salud y nutrición</string>
    <string name="promotion">Promociones</string>
    <string name="TodoslosCampos">Todos los campos son requeridos."</string>
    <string name="estasseguro">¿Estás seguro?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>

    <!-- Screen -->
    <string name="sreen_name">GYM UP!</string>
    <string name="screen_text">Tu gimnasio a un click!</string>

    <!-- Para AdminHealth-->
    <string name="health_titulo">Título</string>
    <string name="health_articulo">Artículo</string>
    <string name="health_btncargar">Cargar:</string>
    <string name="health_btnguardar">Guardar</string>

    <!-- Para AdminServices-->


    <!-- Para AdminServices-->
    <string name="services_tipo">Seleccione tipo de servicio:</string>

    <!-- Para AdminAbout-->
    <string name="about_gim">Aca va el nombre del gim</string>
    <string name="about_mision">Misión:</string>
    <string name="about_vision">Visión:</string>
    <string name="about_content_mision">Agregar información sobre Mision</string>
    <string name="about_content_vision">Agregar información sobre Vision</string>

    <!-- Para AdminOffers-->
    <string name="offer_gim">Aca va el nombre del gim</string>
    <string name="offer_title">Titulo</string>
    <string name="offer_content">Ingrese promoción:</string>
    <string name="offer_button">Guardar</string>

    <!-- Para formulario de registro-->
    <string name="register">Registro</string>
    <string name="register2">Registrarse</string>
    <string name="userRegister">Registro de Usuario</string>
    <string name="fullName">Nombre Completo</string>
    <string name="document">Documento de Identidad</string>
    <string name="cellphone">Celular</string>
    <string name="address">Dirección</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="repeatPassword">Repita la Contraseña</string>
    <string name="gender">Sexo</string>
    <string name="loginUser">Inicio de sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellido</string>
    <string name="city">Ciudad</string>
    <string name="postalCode">Código postal</string>
    <string name="country">País</string>
    <string name="phoneNumber">Teléfono</string>
    <string name="userName">Usuario</string>
    <string name="status">Estado</string>
    <string name="comments">Comentarios</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="selectDate">Fecha de nacimiento</string>
    <string name="selectGym">Selecciona un gimnasio</string>
    <string-array name="genderList">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>

    <string name="IngresarUsuario">Ingresar</string>
    <string name="notienecuenta">¿No tienes registro? <b>Registrate aquí</b></string>
    <string name="agenda">Agenda</string>
    <string name="clientes">Clientes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="servicios">Servicios</string>
    <string name="mi_about">Nosotros</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombregimnasio">Nombre del Gimnasio</string>
    <string name="direccionprincipal">Dirección Principal</string>
    <string name="telefonoprincipal">Teléfono Principal</string>
    <string name="telMovil">Teléfono móvil</string>
    <string name="Email">Correo electrónico</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Estado">Estado / Departamento</string>
    <string name="RUT">RUT / Registro Mercantil</string>
    <string name="NombrePropietario">Nombre del Propietario</string>
    <string name="MovilPropietario">Móvil Propietario</string>
    <string name="EmailDueno">Correo electrónico del Propietario</string>
    <string name="passwordueno">Contraseña del Propietario</string>
    <string name="ActualizarDatos">Actualizar datos</string>
    <string name="area_del_cliente">Área del cliente</string>
    <string name="reservas">Reservas</string>
    <string name="mi_salud">Mi Salud</string>
    <string name="balance">Balance</string>
    <string name="estado_de_cuenta">Estado de Cuenta</string>
    <string name="salud_y_nutrici_n">Salud y Nutrición</string>
    <string name="mensaje_a_ser_enviado">Mensaje a ser enviado</string>
    <string name="t_tulo_o_asunto">Título o Asunto</string>
    <string name="olvido_pass">¿Olvidó su contraseña?</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="correo_electr_nico_registrado">Correo electrónico registrado</string>

    <!--Para el perfil del usuario -->
    <string name="editProfile">Editar perfil</string>
    <string name="updateData">Actualizar datos</string>
    <string name="editPassword">Cambio de contraseña</string>


    <!-- Prueba para servicios -->
    <string-array name="servicesList">
        <item>Natación</item>
        <item>Funcional</item>
        <item>Yoga</item>
        <item>Pilates</item>
        <item>Musculación</item>
        <item>Crossfit</item>
    </string-array>

    <!-- Start Reservation -->
    <string name="btnDatePicker">Seleccionar Fecha</string>
    <string name="btnReservaAction1">Cancelar Reserva</string>
    <string name="btnReservaAction2">Reservar</string>
    <string name="btnReservar">Reservar</string>
    <string name="guardarReserva">Guardar Reserva</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="mis_reservas">Mis reservas</string>
    <!-- End Reservation -->

    <!-- Start Lista de clientes -->
    <string name="btn_bloquear">Bloquear</string>
    <string name="Salir">Cerrar sesión</string>
    <string name="baccesook">Bienvenido - Acceso correcto.</string>
    <!-- End Lista de clientes -->

    <!-- Start Lista de Promociones-->
    <string name="gymPromotion">Promociones</string>
    <string name="Elcampoemailnovacio">¡El campo correo electrónico no puede estar vacio!</string>
    <string name="CorreoEnviado">Correo enviado correctamente, revise carperta spam.</string>
    <string name="usrwrongordisabled">Usuario o contraseña incorrecto, o deshabilitado.</string>
    <string name="BienvenidoAdmin">Bienvenido al Administrador</string>
    <string name="UsrEmailWrong">¡Nombre de usuario o email incorrecto!</string>
    <string name="noPromotions2">No hay promociones activas en este momento.</string>
    <string name="noPromotions3">Vuelve a consultar más adelante.</string>
    <!-- End Lista de Promociones -->

    <!-- Start Main Activity-->
    <string name="seeAll">Ver todos</string>
    <string name="affiliatedGym">Gym Socios</string>
    <string name="affiliatedGymList">Gimnasios asociados</string>
    <string name="readMore">Leer más</string>
    <string name="seeAllA">Ver todas</string>
    <string name="noPromotion">No hay promociones activas por el momento.</string>
    <string name="accesos_principales">Accesos Principales</string>
    <string name="pagos_pendientes">Pagos Pendientes</string>
    <string name="acerca_de">AcercaDe</string>
    <string name="contacto">Contacto</string>
    <!-- End Main Activity -->

    <!-- Start About Us-->
    <string name="location">Ubicación</string>
    <!-- End About Us -->

    <!-- Start User Servicios-->
    <string name="lista_servicios">Lista de servicios</string>
    <!-- End About Us -->

    <!-- Start Agenda-->
    <string name="mis_servicios">Mis servicios</string>
    <string name="sobre_zona_software">Sobre Zona Software</string>
    <string name="enviar_mensaje">Enviar Mensaje</string>
    <string name="texto_2_developers">Disponemos de un grupo de profesionales de la industria TI, expertos en programación web y móvil, adaptables a todos las necesidades de nuestros clientes.</string>
    <string name="texto_1_developers">Somos un grupo de desarrolladores de Software, abocados en la vanguardia tecnológica como principal objetivo.</string>
    <string name="nombre_del_servicio">Nombre del servicio</string>
    <string name="perfil_del_gimnasio">Perfil del Gimnasio</string>
    <string name="detalle_del_servicio">Detalle del servicio</string>
    <string name="detalle_del_servicio">Detalle del servicio</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="logout">Logout</string>
    <!-- End Agenda -->


</resources>